--- a/.coveragerc
+++ b/.coveragerc
@@ -2,8 +2,8 @@
 
 [run]
 branch = True
-source = skltemplate
-include = */skltemplate/*
+source = mislabeled
+include = */mislabeled/*
 omit =
     */setup.py
 
