try run coverage during quality check for faster ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,8 +36,7 @@ test:
   parallel: !reference [.parallel,parallel]
 
 coverage:
-  stage: test
-  needs: [quality]
+  stage: quality
   image: 'python:3.9'
   script:
     - make test-coverage
