--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,30 +59,30 @@ coverage:
         path: coverage.xml
       junit: junit.xml
 
-# test-doc:
-#   stage: test
-#   needs: [quality]
-#   image: 'python:3.9'
-#   script:
-#     - pip install -r docs/doc_requirements.txt
-#     - pip install -e .
-#     - make docs
+test-docs:
+  stage: test
+  needs: [quality]
+  image: 'python:3.9'
+  script:
+    - pip install -r docs/docs-requirements.txt
+    - pip install -e .
+    - make docs
 
-# pages:
-#   stage: doc
-#   needs: [test-doc]
-#   image: 'python:3.9'
-#   script:
-#     - pip install -r docs/doc_requirements.txt
-#     - pip install -e .
-#     - make docs
-#     - mv docs/build/html public
-#   artifacts:
-#     paths:
-#     - public
-#   only:
-#     - main
-#     - tags
+pages:
+  stage: doc
+  needs: [test-docs]
+  image: 'python:3.9'
+  script:
+    - pip install -r docs/docs-requirements.txt
+    - pip install -e .
+    - make docs
+    - mv docs/build/html public
+  artifacts:
+    paths:
+    - public
+  only:
+    - main
+    - tags
     
 # .publish:
 #   stage: deploy
