ignore slow tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,10 @@ Source = "https://github.com/orange-opensource/mislabeled"
 source = "vcs"
 
 [tool.hatch.envs.hatch-test]
-extra-args =  ["--ignore=tests/datasets", "--ignore=tests/test_cache.py"]
+extra-args =  ["--ignore=tests/datasets", 
+  "--ignore=tests/test_cache.py", 
+  "--ignore=tests/probe/test_linear.py"
+]
 extra-dependencies = [
   "mislabeled[examples]",
   "pytest-benchmark",
