--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,19 @@
-name: Tests
+name: test
 
-on: [push, pull_request]
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v5
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-      - run: pip install --upgrade hatch
-      - run: hatch fmt --check
-      - run: hatch test --cover
+          python-version: "3.10"
+      - run: uv run python -m pytest -n auto --cov --cov-report=xml tests
+      - uses: codecov/codecov-action@v5
