--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ classifiers = [
 dependencies = [
     "numpy",
     "scipy",
-    "scikit-learn",
+    "scikit-learn>=1.6",
 ]
 
 [project.optional-dependencies]
