neural tangent features, random features, tangent kernel and tree projections done (need proper tree linear model)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ dev=[
   "pytest-xdist",
   "pytest-benchmark",
   "scipy>=1.15.0",
-  "statsmodels",
+  "statsmodels>=0.14.6",
 ]
 
 [tool.coverage.run]
